2001-06-12  Scott S. Goodwin  <scott@scottg.net>

	* init.c: prefixed functions that are server-specific with "Server"
	to make room for the upcoming client functions.

	* nsopenssl-client-test.htm: added this file to test connectivity
	for the nsopenssl client code.

	* Makefile: removed old CLIENTVERIFY test preprocessor stuff.

	* all: changed #ifdef AS3 to #ifndef NS_MAJOR_VERSION. This means
	it now compiles for AOLserver 3.x by default, since
	NS_MAJOR_VERSION doesn't even exist in 4.x yet.

	* nsopenssl.h: Added code to define the OpenSSL library in use by
	pulling the OPENSSL_VERSION_NUMBER from the source.

2001-06-08  Scott S. Goodwin  <scott@scottg.net>

	* init.c: added SSL_CTX_set_session_id_context call and
	s_server_session_id_context integer. If session caching is on
	(which it is by default) and clientverify is also on (which it is
	not by default) all connections after the first for a particular
	session fail as OpenSSL gets confused. Setting the
	session_id_context fixes this problem. NOTE: if you run more than
	one nsopenssl module on the same server, both of those modules
	will be calling the exact same OpenSSL functions (from the module
	that was loaded first). In such a case, the session_id_context
	integer may have to be different for each of the loaded modules.

	* init.c: removed unused InitSession prototype.

2001-05-22  Scott S. Goodwin  <scott@scottg.net>

	* tclcmds.c: cleaned up NsOpenSSLGetConn (had to change the
	aolserver 4.x core server to put back Ns_ConnDriverContext, which
	was always returning NULL);

2001-05-18  Scott S. Goodwin  <scott@scottg.net>

        * init.c, nsopenssl.c, ssl.c, tclcmds.c, Makefile: integrated
        changes from Jim Davidson and Kris Rehberg to make nsopenssl work
        with AOLserver 4.x's new communication API. 3.x-specific code is
        wrapped with '#ifdef AS3' everywhere it needs to be. nsopenssl at
        this point defaults to compiling for 4.x. To make it compile with